# BE-HTTM

./: .gitignore  DOWNLOAD_LOG_ANALYSIS.md  ENTITY_CLASSES_ANALYSIS.md  README.md  env.example  pyproject.toml
app/: database.py  main.py
app/middleware/: auth_middleware.py
app/models/: models.py
app/routers/: auth_router.py  log_router.py  video_router.py
app/schemas/: schemas.py
app/services/: auth_service.py  log_service.py  plate_service.py  traffic_light_service.py  video_service.py
